ingress/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: nginxapp2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: nginxapp1
  ports:
  - name: app1
    protocol: TCP
    port: 80
    targetPort: 80
