ingress/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: nginxapp2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: nginxapp2
  ports:
  - name: app2
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: expense
spec:
  ingressClassName: alb
  rules:
  - host: app2.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app2
            port:
              number: 80
